# rsort

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: test.yml
rsort/: main.py  requirements.py
tests/: test_version.py
