[tool.poetry]
name = "rsort"
version = "0.1.1"
description = "Sort requirements with ease! 🎉"
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/rsort"
include = ["rsort/py.typed"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
rsort = "rsort.main:app"
reqsort = "rsort.main:app"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
typer = { extras = ["all"], version = "^0.3.2" }

[tool.poetry.dev-dependencies]
Cython = "^0.29.22"
autoflake = "^1.4"
bandit = "^1.6"
black = "^20.8b1"
cruft = "^2.2"
flake8 = "^3.9.0"
ipython = "^7.7"
isort = "^5.0"
mypy = "^0.812"
portray = "^1.6.0"
pre-commit = "^2.9.3"
pytest = "^6.2"
pytest-cov = "^2.10.1"
pytest-mock = "^1.10"
safety = "^1.8"
vulture = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
